fix: change dark mode background color

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,7 +11,7 @@
 }
 
 .dark {
-  background-color: black;
+  background-color: #292d3e;
   color: white;
 }
 
